EKS-k8s-on-modules/test-deployments/pacman/packman-deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: pacman
---
apiVersion: v1
kind: Service
metadata:
  name: pac-man
  namespace: pacman
  labels:
    name: pac-man
spec:
  selector:
    name: pac-man
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pac-man
  namespace: pacman
  labels:
    name: pac-man
spec:
  replicas: 1
  selector:
    matchLabels:
      name: pac-man
  template:
    metadata:
      labels:
        name: pac-man
    spec:
      containers:
        - name: pac-man
          image: docker.io/jessehoch/pacman-nodejs-app:latest
          ports:
            - name: http-server
              containerPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pacman
  namespace: pacman
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: http-01-production
spec:
  ingressClassName: external-nginx
  rules:
    - host: pacman.lingerie.by # The subdomain for the CNAME record. Replace with your subdomain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pac-man
                port:
                  number: 8080
  tls:
    - hosts:
        - pacman.lingerie.by # The subdomain for the CNAME record. Replace with your subdomain
      secretName: pacman.lingerie.by-tls # Replace with your subdomain
